# ChangeLog for kde-misc/kblogger
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kblogger/ChangeLog,v 1.13 2008/03/01 14:39:10 ingmar Exp $

  14 Nov 2009; Jonathan Callen <abcd@gentoo.org> kblogger-0.6.5.ebuild,
  kblogger-0.7_beta2.ebuild, kblogger-0.7_beta3.ebuild:
  Remove monolithic deps

*kblogger-0.7_beta3 (01 Mar 2008)

  01 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +kblogger-0.7_beta3.ebuild:
  Added kblogger-0.7_beta3.ebuild.

  18 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> kblogger-0.6.5.ebuild,
  kblogger-0.7_beta2.ebuild:
  Update kde-base/* dependencies so that KDE 4 doesn't satisfy it. bug 206571.

*kblogger-0.7_beta2 (04 Nov 2007)

  04 Nov 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +kblogger-0.7_beta2.ebuild:
  Version bump to 0.7_beta2 as per bug 197008.

*kblogger-0.6.5 (27 Mar 2007)

  27 Mar 2007; <genstef@gentoo.org> -kblogger-0.6.2.ebuild,
  +kblogger-0.6.5.ebuild:
  Version bump thanks to Jason Oliveira <mushroomblue@elazulspad.net> in bug
  172269

  21 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Give this back to kde herd.

  06 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> kblogger-0.6.2.ebuild:
  Fix dependencies for monolithic KDE, thanks to Thorsten Becker in bug #146575.

  16 Aug 2006; Joshua Jackson <tsunam@gentoo.org> kblogger-0.6.2.ebuild:
  adding ~x86, as something apparently went wrong with the commit..or lackthereof, David's keeping a eye one me ^.^
  
  01 Aug 2006; Diego Pettenò <flameeyes@gentoo.org> kblogger-0.6.2.ebuild:
  Add missing kicker dependency, see bug #142324.

  31 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> -kblogger-0.6.ebuild:
  Drop old version.

*kblogger-0.6.2 (08 Jun 2006)

  08 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> +kblogger-0.6.2.ebuild:
  Version bump.

*kblogger-0.6 (30 May 2006)

  30 May 2006; Diego Pettenò <flameeyes@gentoo.org>