@@ -1,8 +1,8 @@
 DIST kblogger-0.6.5.tar.gz 1048826 RMD160 fd7b98b856a38a3cdb36f396215cee0c0721ed1e SHA1 a7ede324faae7e9fb7955d7b8b756aadd4a3fbb6 SHA256 f63255f16942f3eff2c7465e58c79b3b50f1eca82663462f915c70a42e29b853
 DIST kblogger-0.7-beta2.tar.bz2 1131197 RMD160 6c29b8a21c0d2f62917db5aaf22d9244f6bd5345 SHA1 07e6739306cbd66038999da56ecae8f3ea43ebcd SHA256 c32d46c8703a6d4c2abb87844ed99b8347b2843f78b62e8308b740d1644e6c6b
 DIST kblogger-0.7beta3.tar.bz2 1113904 RMD160 36ca91bc5efdf4b3e31dfa1bad2a657da3640177 SHA1 ca18b4be0380ff03e1760b9e149014d646cce6e9 SHA256 2c70f8a3e845c234232f6071aae6b916b6469840447cc47af8f1adaa814dcd47
-EBUILD kblogger-0.6.5.ebuild 592 RMD160 6c6c777d4247bb54241b62ea639e9143ffbbd92e SHA1 c2267e7991758cb2054c5fbd26dcc4f9c7f0e082 SHA256 fb1c0db26d26df0f17a7623476e9db376aa0cb87fb0b1744747bc15458876574
-EBUILD kblogger-0.7_beta2.ebuild 619 RMD160 1e62362e7833126ee07d34a73a82d9ac5f735cd8 SHA1 02b6e2144d995ab9a83313792be0be971b881a85 SHA256 957ecad01917851603b356be13338ba51eceaead495f97deac5405e523372af8
-EBUILD kblogger-0.7_beta3.ebuild 616 RMD160 c5923077e8a0b4c89c67db1aebc2048ce1bfb7a4 SHA1 bd872f33e6b0daac9d9da04efdd468b1e96e63a4 SHA256 d59266e51a90a9025287e1243476b85cd9c1c01c12894c9282dfdb380a318fa0
-MISC ChangeLog 2452 RMD160 cb50b64494cf5208e3d21ecef4c91bf3607131d8 SHA1 c771da079652aecab4587a16a109b50c5c742ca6 SHA256 8a7204413ac991e1a19a55ea7638fbd9983b42643bfad31aa695ef8361992897
+EBUILD kblogger-0.6.5.ebuild 606 RMD160 350ba3f650dc7fc30f58d28d580c97fbb89ba46c SHA1 6ac3e70567669d8a7ef4d5ffebfeaa73dea6f066 SHA256 cb3412f5efb9dc40ffd1851459abcef27f87f8bd338ea35d27ef6010d529c161
+EBUILD kblogger-0.7_beta2.ebuild 633 RMD160 fa7bc0b4947fb32b9342caecae0263843ac730b7 SHA1 d0b5059ca174665bf0d406b69b052366d81b6542 SHA256 abded7f83772443069888660f31b9ec0f0513fb0ba55196e2ddf2bba65572f15
+EBUILD kblogger-0.7_beta3.ebuild 630 RMD160 7fcf49220c00a2ddaacb5bd8bc35301b08527abd SHA1 7b6f5f9373c30e17878fcc4c9b2e8b003cd43c84 SHA256 a1f7adda5bac8b7da0a2edb023812d05f593aba4fc91599c0252a225efb793a0
+MISC ChangeLog 2660 RMD160 3ab8ed14519a6cbbcdf42b6e0c75ba6d01b76a3f SHA1 b089058e5792dda0fcd8c17bdccceb1a6858139d SHA256 d9cc740932c6966f13e2273dd06372ac34fb1c29b1a67bd3f42b2740905b1110
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
