@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/kde-misc/kblogger/ChangeLog,v 1.13 2008/03/01 14:39:10 ingmar Exp $
 
+  16 Nov 2009; Ladislav Láska <ladislav.laska@gmail.com> kblogger-0.6.5.ebuild, 
+  kblogger-0.7_beta2.ebuild, kblogger-0.7_beta3.ebuild:
+  Fixed build error per bug #260989, as suggested by Michael Niggli.
+
   14 Nov 2009; Jonathan Callen <abcd@gentoo.org> kblogger-0.6.5.ebuild,
   kblogger-0.7_beta2.ebuild, kblogger-0.7_beta3.ebuild:
   Remove monolithic deps
